[gd_scene load_steps=2 format=3 uid="uid://dx6gmbuex0n2y"]

[ext_resource type="Script" path="res://challenge.gd" id="1_ygu4o"]

[node name="Challenge" type="Control"]
clip_contents = true
custom_minimum_size = Vector2(577, 330)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -575.0
offset_bottom = -318.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(2, -1)
script = ExtResource("1_ygu4o")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(3.00817e-06, 0.474507, 0.11392, 1)
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CodeEdit" type="CodeEdit" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(577, 330)
layout_mode = 2
text = "#include <stdio.h>

int main(void)  {
	
	int i;
		
		colocar_tabuas(); 
}









"
editable = false
gutters_draw_line_numbers = true
metadata/_edit_use_anchors_ = true

[node name="OptionButton" type="OptionButton" parent="VBoxContainer/CodeEdit"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 47.0
offset_top = 137.0
offset_right = 348.0
offset_bottom = 157.0

[node name="CloseBtn" type="Button" parent="VBoxContainer/CodeEdit"]
layout_mode = 2
offset_left = 38.0
offset_top = 288.0
offset_right = 205.0
offset_bottom = 319.0
text = "close"

[connection signal="item_selected" from="VBoxContainer/CodeEdit/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="VBoxContainer/CodeEdit/CloseBtn" to="." method="_on_close_btn_pressed"]
