[gd_scene load_steps=3 format=3 uid="uid://cf01xc3ob21yl"]

[ext_resource type="Script" path="res://scripts/challenge.gd" id="1_ygu4o"]
[ext_resource type="PackedScene" uid="uid://cjk8iulp0ax2q" path="res://scenes/MyOptBtn.tscn" id="2_halth"]

[node name="Challenge" type="Control"]
clip_contents = true
custom_minimum_size = Vector2(577, 330)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(2, -1)
script = ExtResource("1_ygu4o")
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="."]
z_index = 10
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(3.00817e-06, 0.474507, 0.11392, 1)

[node name="CodeEdit" type="CodeEdit" parent="ColorRect"]
unique_name_in_owner = true
custom_minimum_size = Vector2(577, 330)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "#include <stdio.h>

int main(void)  {
	
	int i;
	for                             i++)
		colocarTabua(i); 
}"
editable = false
gutters_draw_line_numbers = true
metadata/_edit_lock_ = true

[node name="VarOptBtn" parent="ColorRect/CodeEdit" instance=ExtResource("2_halth")]
unique_name_in_owner = true
layout_mode = 2
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 72.0
offset_top = 139.0
offset_right = 72.0
offset_bottom = 139.0

[node name="ConditOptBtn" parent="ColorRect/CodeEdit" instance=ExtResource("2_halth")]
unique_name_in_owner = true
layout_mode = 2
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 128.0
offset_top = 139.0
offset_right = 128.0
offset_bottom = 139.0

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/CodeEdit"]
layout_mode = 1
offset_left = 11.0
offset_top = 221.0
offset_right = 511.0
offset_bottom = 651.0
theme_override_constants/separation = 7

[node name="Aviso" type="Label" parent="ColorRect/CodeEdit/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 50)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
autowrap_mode = 3
metadata/_edit_lock_ = true

[node name="ColorRect" type="ColorRect" parent="ColorRect/CodeEdit/VBoxContainer/Aviso"]
custom_minimum_size = Vector2(500, 50)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
metadata/_edit_lock_ = true

[node name="Btns" type="HBoxContainer" parent="ColorRect/CodeEdit/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 300
metadata/_edit_lock_ = true

[node name="RunBtn" type="Button" parent="ColorRect/CodeEdit/VBoxContainer/Btns"]
unique_name_in_owner = true
layout_mode = 2
text = "Run Code"
metadata/_edit_lock_ = true

[node name="CloseBtn" type="Button" parent="ColorRect/CodeEdit/VBoxContainer/Btns"]
unique_name_in_owner = true
layout_mode = 2
text = "Close"
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="ColorRect/CodeEdit/VBoxContainer"]
custom_minimum_size = Vector2(500, 324)
layout_mode = 2
text = "
Bem vindo ao seu primeiro desafio!
Para jogar, clique nos dois primeiros campos não preenchidos do laço for (Linha 6) e selecione uma das opções. Em seguida, clique em “Run Code”.
Lembre-se de que faltam 7 tábuas em sequência nesta ponte, que está sendo representada como um vetor iniciando na posição zero. Considere que a parte inicial construída da ponte é irrelevante, ou seja, a contagem das posições deve começar após a parte quebrada.

Boa Sorte!
"
autowrap_mode = 3
metadata/_edit_lock_ = true

[connection signal="option_selected" from="ColorRect/CodeEdit/VarOptBtn" to="." method="_on_var_opt_btn_option_selected"]
[connection signal="option_selected" from="ColorRect/CodeEdit/ConditOptBtn" to="." method="_on_condit_opt_btn_option_selected"]
[connection signal="pressed" from="ColorRect/CodeEdit/VBoxContainer/Btns/RunBtn" to="." method="_on_run_btn_pressed"]
[connection signal="pressed" from="ColorRect/CodeEdit/VBoxContainer/Btns/CloseBtn" to="." method="_on_close_btn_pressed"]
